--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebAppSistemaMedicoContext": "Server=(localdb)\\mssqllocaldb;Database=WebAppSistemaMedicoContext-1c12debb-ef89-48aa-9782-368ce9b36d56;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
