--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "WebAppSistemaMedicoContext": "Server=carlosJesus\\SQLEXPRESS;Database=SistemaMedicoMartin;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    },
+    "Authentication": {
+        "Google": {
+            "ClientId": "YOUR_GOOGLE_CLIENT_ID_HERE",
+            "ClientSecret": "YOUR_GOOGLE_CLIENT_SECRET_HERE"
+        }
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "WebAppSistemaMedicoContext": "Server=(localdb)\\mssqllocaldb;Database=SistemaMedicoMartin2;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
 }
